--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-	</dependencies>
+        <!--suppress MavenModelInspection -->
+		<dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
